src/objects/AB2__Rep__c.object
<CustomObject>
    <description>AdBook Rep</description>
    <fields>
        <fullName>AB2__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ContactID__c</fullName>
        <description>The AdBook Contact Id</description>
        <inlineHelpText>The AdBook Contact Id</inlineHelpText>
        <label>Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ExternalID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AB2__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__RepTypeID__c</fullName>
        <label>Rep Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__RepTypeListName__c</fullName>
        <description>The Name of the Rep Type based on the Rep Type Id. Read Only.</description>
        <label>Rep Type</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AdBook Rep</label>
    <listViews>
        <fullName>AB2__All</fullName>
        <columns>NAME</columns>
        <columns>AB2__FirstName__c</columns>
        <columns>AB2__LastName__c</columns>
        <columns>AB2__RepTypeID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>AB2__RepTypeListName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook Reps</pluralLabel>
    <recordTypes>
        <fullName>AB2__Advertising_Contact</fullName>
        <active>true</active>
        <label>Advertising Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>AB2__Configured_Contact</fullName>
        <active>true</active>
        <description>The default Rep Record Type</description>
        <label>Configured Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>AB2__IDGC_Contact</fullName>
        <active>true</active>
        <label>IDGC Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>AB2__Operations_Contact</fullName>
        <active>true</active>
        <label>Operations Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>AB2__Print_Rep</fullName>
        <active>true</active>
        <label>Print Rep</label>
    </recordTypes>
    <recordTypes>
        <fullName>AB2__SALES_REP</fullName>
        <active>true</active>
        <label>Sales Rep</label>
    </recordTypes>
    <recordTypes>
        <fullName>AB2__SalesRep_Admin</fullName>
        <active>true</active>
        <label>SalesRep Admin</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>